--- a/PaymentJournal.Web/PaymentJournal.Web.csproj
+++ b/PaymentJournal.Web/PaymentJournal.Web.csproj
@@ -12,6 +12,9 @@
 
   <ItemGroup>
     <PackageReference Include="LiteDB" Version="5.0.11" />
+    <PackageReference Include="Microsoft.TestPlatform.TestHost" Version="17.2.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2-beta1" />
+    <PackageReference Include="Newtonsoft.Json.Bson" Version="1.0.2" />
   </ItemGroup>
 
 </Project>
