--- a/PaymentJournal.Web/appsettings.json
+++ b/PaymentJournal.Web/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "LiteDb": ".\\data\\paymentjournal.db"
+  }
 }
