--- a/PaymentJournal.Web/Properties/launchSettings.json
+++ b/PaymentJournal.Web/Properties/launchSettings.json
@@ -8,7 +8,7 @@
     }
   },
   "profiles": {
-    "PaymentJournal.Web": {
+    "PaymentJournal_Web": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
