Working on pages

--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "LiteDb": ".\\data\\paymentjournal.db"
+    "LiteDb": ".\\.\\data\\litedb.db"
   }
 }
