--- a/Web/appsettings.Development.json
+++ b/Web/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "LiteDb": ".\\.\\data\\litedb.db"
   }
 }
