--- a/Web/PaymentJournal_Web.csproj
+++ b/Web/PaymentJournal_Web.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FontAwesome" Version="4.7.0" />
     <PackageReference Include="LiteDB" Version="5.0.11" />
     <PackageReference Include="Microsoft.TestPlatform.TestHost" Version="17.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2-beta1" />
