--- a/Web/Properties/launchSettings.json
+++ b/Web/Properties/launchSettings.json
@@ -8,14 +8,14 @@
     }
   },
   "profiles": {
-    "PaymentJournal_Web": {
+    "PaymentJournal.Web": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7050;http://localhost:5234",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:7050;http://localhost:5234",
+      "dotnetRunMessages": true
     },
     "IIS Express": {
       "commandName": "IISExpress",
