--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+
+# Project-specific files
+deploy.ps1
+
 # User-specific files
 *.rsuser
 *.suo
