--- a/PaymentJournal.Web/PaymentJournal.Web.csproj
+++ b/PaymentJournal.Web/PaymentJournal.Web.csproj
@@ -1,17 +1,14 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
-
+<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-	<SatelliteResourceLanguages>en</SatelliteResourceLanguages>
-	
+    <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
+    <Version>2022.10.10.1</Version>
   </PropertyGroup>
-
   <ItemGroup>
     <Folder Include="Data\" />
   </ItemGroup>
-
   <ItemGroup>
     <PackageReference Include="Blazorise" Version="1.0.4" />
     <PackageReference Include="Blazorise.Bootstrap" Version="1.0.4" />
@@ -21,7 +18,5 @@
     <PackageReference Include="Microsoft.TestPlatform.TestHost" Version="17.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2-beta1" />
     <PackageReference Include="Newtonsoft.Json.Bson" Version="1.0.2" />
-	
   </ItemGroup>
-
 </Project>
