--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 # Project-specific files
 deploy.ps1
 
+
 # User-specific files
 *.rsuser
 *.suo
@@ -37,6 +38,7 @@ bld/
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
+.vscode/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
