--- a/PaymentJournal.Web/PaymentJournal.Web.csproj
+++ b/PaymentJournal.Web/PaymentJournal.Web.csproj
@@ -11,10 +11,10 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="FontAwesome" Version="4.7.0" />
-    <PackageReference Include="LiteDB" Version="5.0.11" />
-    <PackageReference Include="Microsoft.TestPlatform.TestHost" Version="17.2.0" />
-    <PackageReference Include="MudBlazor" Version="6.1.2" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.2-beta1" />
+    <PackageReference Include="LiteDB" Version="5.0.13" />
+    <PackageReference Include="Microsoft.TestPlatform.TestHost" Version="17.4.0" />
+    <PackageReference Include="MudBlazor" Version="6.1.4" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
     <PackageReference Include="Newtonsoft.Json.Bson" Version="1.0.2" />
   </ItemGroup>
 </Project>
