--- a/PaymentJournal.Web/appsettings.json
+++ b/PaymentJournal.Web/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "AllowedHosts": "*",
+  "IsDocker": "true",
   "ConnectionStrings": {
-    "LiteDb": ".\\.\\data\\litedb.db"
+    "LiteDb": "litedb.db"
   }
 }
