--- a/PaymentJournal.Web/PaymentJournal.Web.csproj
+++ b/PaymentJournal.Web/PaymentJournal.Web.csproj
@@ -3,8 +3,8 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
-    <Version>2022.10.10.1</Version>
+    <!--<SatelliteResourceLanguages>en</SatelliteResourceLanguages>-->
+    <EnableCssIsolation>true</EnableCssIsolation>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="Data\LiteDb" />
